[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/Amdre_boss_scene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/boss_body.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Beach_Scenario .png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy_hp_hud.png" type="Texture" id=5]
[ext_resource path="res://assets/andre_pizza.png" type="Texture" id=6]
[ext_resource path="res://assets/andre_laser.png" type="Texture" id=7]
[ext_resource path="res://assets/andre_walk.png" type="Texture" id=8]
[ext_resource path="res://assets/andre_wheel.png" type="Texture" id=9]
[ext_resource path="res://Sprites/player_hud.png" type="Texture" id=10]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Musics/Nene's Crazy Beach Party.ogg" type="AudioStream" id=12]
[ext_resource path="res://sfx/mixkit-falling-male-scream-391.wav" type="AudioStream" id=13]
[ext_resource path="res://sfx/laser_095.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx/feet_02.wav" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 206 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 63.7122 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28, 64.7226 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 57.5954 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 54 )

[sub_resource type="Animation" id=7]
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath("Amdre_body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 4.5, 5.5, 8.5, 9.5, 11, 11.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 350 ), Vector2( 0, 350 ), Vector2( 0, 0 ), Vector2( 896, 0 ), Vector2( 896, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 448, 0 ), Vector2( 448, 350 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 4.5, 5.5, 8.5, 9.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 896, 0 ), Vector2( 896, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("laser:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 1.7, 4, 4.2, 5.5, 5.7, 8, 8.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 5 ), Vector2( 1, 5 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 5 ), Vector2( 1, 5 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("laser:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 8.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("laser/shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5, 8.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Amdre_body/shape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 11.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Amdre_body/Sprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 1.5, 1.6, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10, 10.5, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Amdre_body/Sprite:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 11.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 8 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("sfx:stream")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("sfx:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.5, 4.5, 5.5, 8.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=8]
length = 16.0
tracks/0/type = "value"
tracks/0/path = NodePath("ball:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 5.6, 7.5, 10.5, 12.5, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -256, 222 ), Vector2( 0, 222 ), Vector2( 0, 222 ), Vector2( 768, 222 ), Vector2( 768, 222 ), Vector2( 0, 222 ), Vector2( 0, 222 ), Vector2( -256, 222 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Amdre_body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 1.5, 2.5, 5.6, 7.5, 10.5, 12.5, 14, 15, 15.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 350 ), Vector2( 64, 350 ), Vector2( 64, 350 ), Vector2( 64, 286 ), Vector2( 832, 286 ), Vector2( 832, 286 ), Vector2( 64, 286 ), Vector2( 64, 286 ), Vector2( 448, 286 ), Vector2( 448, 286 ), Vector2( 448, 350 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ball:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ball/shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 12.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Amdre_body/shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Amdre_body/Sprite:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Amdre_body/Sprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Amdre_body/Sprite:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2.5, 5.6, 7.5, 10.5, 12.5, 14, 15, 15.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 360.0, 0.0, 0.0, 360.0, 360.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ball/AnimatedSprite:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 2.5, 5.6, 7.5, 10.5, 12.5, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 360.0, 0.0, 0.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("sfx:stream")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("sfx:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 2.5, 5.6, 7.5, 10.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=9]
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath("Amdre_body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.4, 5, 7, 11, 11.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 350 ), Vector2( 896, 350 ), Vector2( 896, 350 ), Vector2( 896, 350 ), Vector2( 0, 350 ), Vector2( 0, 350 ), Vector2( 448, 350 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shout:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 5, 7, 10.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 896, 350 ), Vector2( 896, 350 ), Vector2( 128, 350 ), Vector2( 128, 350 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shout:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 2.5, 4, 5, 7, 8, 9.5, 10.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -5, 1 ), Vector2( -5, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 5, 1 ), Vector2( 5, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("shout:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6, 4.9, 7, 10.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shout/shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 5, 7, 10.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Amdre_body/shape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 11.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Amdre_body/Sprite:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Amdre_body/Sprite:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5, 5, 7, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 8 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Amdre_body/Sprite:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 1.5, 1.6, 1.7, 4, 4.1, 4.2, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1, 7.2, 9.5, 9.6, 9.7, 11, 11.1, 11.2, 11.3, 11.4, 11.5, 11.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 0, 1, 2, 2, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 2, 2, 1, 0, 0, 1, 0, 1, 0, 1, 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Amdre_body/Sprite:hframes")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.5, 5, 7, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 3, 2 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("sfx:stream")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("sfx:playing")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 1.5, 4.9, 6.9, 10.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=10]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Amdre_body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 350 ), Vector2( 448, 350 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 511, 4 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 80, 301 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 111, 10 )

[sub_resource type="DynamicFont" id=14]
size = 36
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=15]
resource_name = "event"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Inicio:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Inicio:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "event1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("level_finalizado:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("level_finalizado:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Amdre_boss_scene" type="Node2D"]
modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="shout" type="Area2D" parent="." groups=["enemy_hitbox"]]
visible = false
position = Vector2( 128, 350 )

[node name="ColorRect" type="ColorRect" parent="shout"]
modulate = Color( 1, 1, 1, 0.631373 )
margin_top = -138.0
margin_right = 128.0
margin_bottom = 270.0
color = Color( 1, 0.937255, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shape" type="CollisionShape2D" parent="shout"]
position = Vector2( 64, 64 )
shape = SubResource( 1 )
disabled = true

[node name="laser" type="Area2D" parent="." groups=["enemy_hitbox"]]
visible = false

[node name="ColorRect" type="ColorRect" parent="laser"]
margin_left = 54.0
margin_right = 74.0
margin_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 1, 0.00784314, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shape" type="CollisionShape2D" parent="laser"]
position = Vector2( 64, 64 )
shape = SubResource( 2 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 976.0
margin_bottom = 28.0
color = Color( 0.380392, 0.827451, 0.890196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball" type="Area2D" parent="." groups=["enemy_hitbox"]]
visible = false
position = Vector2( -256, 222 )

[node name="shape" type="CollisionShape2D" parent="ball"]
position = Vector2( 128, 128 )
scale = Vector2( 13, 13 )
shape = SubResource( 3 )
disabled = true

[node name="AnimatedSprite" type="Sprite" parent="ball"]
position = Vector2( 128, 130 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
hframes = 2

[node name="Amdre_body" type="KinematicBody2D" parent="."]
position = Vector2( 448, 350 )
script = ExtResource( 2 )
enemy_hp = 1500

[node name="hurtbox" type="Area2D" parent="Amdre_body" groups=["enemy_hurtbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Amdre_body/hurtbox"]
position = Vector2( 64, 64 )
shape = SubResource( 4 )

[node name="shape" type="CollisionShape2D" parent="Amdre_body"]
position = Vector2( 64, 64 )
shape = SubResource( 5 )

[node name="hitbox" type="Area2D" parent="Amdre_body" groups=["enemy_hitbox"]]

[node name="shape" type="CollisionShape2D" parent="Amdre_body/hitbox"]
position = Vector2( 64, 64 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Amdre_body"]
position = Vector2( 64, 66 )
scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
hframes = 2

[node name="anim" type="AnimationPlayer" parent="."]
anims/event1 = SubResource( 7 )
anims/event2 = SubResource( 8 )
anims/event3 = SubResource( 9 )
anims/idle = SubResource( 10 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 133, 443 )

[node name="walls" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="walls"]
collision_layer = 0
collision_mask = 5

[node name="shape" type="CollisionShape2D" parent="walls/Ground"]
position = Vector2( 512, 479 )
shape = SubResource( 11 )

[node name="wall" type="StaticBody2D" parent="walls"]
collision_layer = 0
collision_mask = 5

[node name="shape" type="CollisionShape2D" parent="walls/wall"]
position = Vector2( 0, 300 )
shape = SubResource( 12 )

[node name="shape2" type="CollisionShape2D" parent="walls/wall"]
position = Vector2( 1024, 300 )
shape = SubResource( 12 )

[node name="ColorRect" type="ColorRect" parent="walls/wall"]
modulate = Color( 1, 1, 1, 0.466667 )
margin_right = 78.0
margin_bottom = 489.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="walls/wall"]
modulate = Color( 1, 1, 1, 0.466667 )
margin_left = 944.0
margin_right = 1022.0
margin_bottom = 489.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball_platform" type="StaticBody2D" parent="."]
position = Vector2( 512, 340 )
collision_layer = 0
collision_mask = 5

[node name="shape" type="CollisionShape2D" parent="ball_platform"]
shape = SubResource( 13 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="ball_platform"]
margin_left = -106.0
margin_top = -8.0
margin_right = 111.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_hp_bar" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.894118 )
position = Vector2( 700, 8 )
scale = Vector2( 0.3, 1 )

[node name="hp_bar2" type="ColorRect" parent="enemy_hp_bar"]
margin_left = 1008.0
margin_top = 392.0
margin_right = 1056.0
margin_bottom = 712.0
rect_rotation = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_bar" type="ColorRect" parent="enemy_hp_bar"]
margin_left = 1008.0
margin_top = 392.0
margin_right = 1056.0
margin_bottom = 712.0
rect_rotation = 180.0
color = Color( 0.960784, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="suport" type="Sprite" parent="enemy_hp_bar"]
position = Vector2( 984, 212 )
texture = ExtResource( 5 )

[node name="player_hp" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.894118 )
position = Vector2( -360, 4 )
scale = Vector2( 0.4, 1 )

[node name="suport_bar" type="ColorRect" parent="player_hp"]
margin_left = 1008.0
margin_top = 392.0
margin_right = 1056.0
margin_bottom = 712.0
rect_rotation = 180.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_bar" type="ColorRect" parent="player_hp"]
margin_left = 984.0
margin_top = 392.0
margin_right = 1008.0
margin_bottom = 712.0
rect_rotation = 180.0
color = Color( 0.960784, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp_bar" type="ColorRect" parent="player_hp"]
margin_left = 1007.0
margin_top = 392.0
margin_right = 1029.0
margin_bottom = 712.0
rect_rotation = 180.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="suport" type="Sprite" parent="player_hp"]
position = Vector2( 984, 212 )
texture = ExtResource( 10 )

[node name="Inicio" type="Label" parent="."]
margin_left = 304.0
margin_top = 300.0
margin_right = 616.0
margin_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.709804, 1, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "~Amdre Young~"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_finalizado" type="Label" parent="."]
visible = false
margin_left = 304.0
margin_top = 300.0
margin_right = 616.0
margin_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.709804, 1, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Level Completo!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim2" type="AnimationPlayer" parent="."]
anims/event = SubResource( 15 )
anims/event1 = SubResource( 16 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="area_entered" from="Amdre_body/hurtbox" to="Amdre_body" method="_on_hurtbox_area_entered"]
